routes/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: default
  labels:
    app: apis
    extauth: basic
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
      # Bind to a specific listener in the parentRef (Gateway) using sectionName field.
      # sectionName: foo
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: RegularExpression
          # Match http://api.example.com/removethis/{status-group}/status
          # E.g. http://api.example.com/removethis/200/status
          value: ^\/v1\/\d{3}\/status$
          # type: PathPrefix
          # value: /
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
